DONE- fixing slider on mobile

--- a/artistPage.css
+++ b/artistPage.css
@@ -305,8 +305,7 @@ hr {
   border-radius: 2px;
   overflow: hidden;
   display: flex;
-  text-align: center;
-  justify-content: center;
+  
 }
 /*PLAYER END*/
 
@@ -359,7 +358,7 @@ hr {
     position: fixed;
     bottom: 0;
     padding: 10px 0 0 0;
-    text-align: center;
+   
   }
   .songTitle {
     font-size: 14px;
@@ -384,8 +383,7 @@ hr {
   .slider {
     padding-top: 5px;
     display: flex;
-    text-align: center;
-    justify-content: center;
+  
   }
   .player-div {
     margin-top: 20px;
@@ -397,8 +395,7 @@ hr {
     border-radius: 2px;
     overflow: hidden;
     display: flex;
-    text-align: center;
-    justify-content: center;
+    
   }
   .third-col-player {
     display: none;
@@ -410,8 +407,7 @@ hr {
     border-radius: 2px;
     overflow: hidden;
     display: flex;
-    text-align: center;
-    justify-content: center;
+
   }
 }
 
